# backend_axum

./: .env  Cargo.toml  README.md
src/: app_error.rs  app_state.rs  config.rs  db.rs  lib.rs  main.rs
src/api/: mod.rs  router.rs
src/api/auth/: dto.rs
src/api/game/: README.md  mod.rs  routes.rs
src/api/me/: handler.rs  mod.rs  routes.rs
src/api/me/friends/: routes.rs
src/api/me/settings/: routes.rs
src/api/me/stats/: routes.rs
src/api/user/: handler.rs  jo_student.txt  mod.rs  routes.rs
src/domain/: mod.rs
src/domain/game/: repository.rs  service.rs
src/domain/me/: mod.rs  repository.rs  service.rs
src/domain/me/friends/: service.rs
src/domain/me/settings/: service.rs
src/domain/me/stats/: service.rs
src/domain/user/: README.md  repository.rs  service.rs
src/dto/: game.rs  me.rs  mod.rs  user.rs
src/entities/: account.rs  contact.rs  conversation.rs  feedback.rs  friend.rs  game.rs  message.rs  mod.rs  move.rs  notification.rs  participant.rs  prelude.rs  session.rs  user.rs  user_settings.rs  user_stats.rs  verification_token.rs
src/infra/: README.md  redis.rs
src/infra/repositories/: game_repository.rs  me_repository.rs  mod.rs  user_repository.rs
