[package]
name = "backend_axum"
version = "0.1.0"
authors = ["anoukan", "jalbiser", "ekrause"]
edition = "2024"

[dependencies]
# Web framework
axum = { version = "0.8.8", features = ["macros", "ws"] }
tokio = { version = "1.49.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["cors", "trace"] }

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

# Environment & Logging
dotenv = "0.15.0"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }


# UUID
uuid = { version = "1.11.0", features = ["v4", "serde"] }

# Time
chrono = "0.4"

# WebSocket
futures-util = "0.3"

# Concurrent maps
dashmap = "5.5"

# JWT Authentication
jsonwebtoken = "9.3"

# Password hashing
argon2 = "0.5"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
